# language-3d

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  e2e_4wheel_dual_arm.py  progress.txt  pyproject.toml  task.json  项目期望.txt
.github/workflows/: ci.yml
data/: assembly_vlm_e2e_report.json  collision_e2e_report.json  dual_arm_wheeled_robot_report.json  e2e_assembly_report.json  e2e_bolted_assembly_report.json  e2e_design_report.json  e2e_report.json  vlm_accuracy_report.json
data/e2e_runs/00_cantilever_bracket/: cantilever_bracket.FCStd
data/e2e_runs/00_cube/: cube.FCStd
data/e2e_runs/00_flange_coupling/: flange.FCStd
data/e2e_runs/00_plate_with_hole/: plate_hole.FCStd
data/e2e_runs/01_cylinder/: cylinder.FCStd  cylinder.stl
data/e2e_runs/01_l_bracket/: l_bracket.FCStd
data/e2e_runs/01_stepped_shaft/: stepped_shaft.FCStd
data/projects/: assembly_test.FCStd  base_plate.FCStd  base_plate.step  base_plate.stl  cantilever_beam.FCStd  cantilever_beam_fea.20260601-183707.FCBak  cantilever_beam_fea.FCStd  complex_part.FCStd  complex_part.stl  fea_test.20260601-183842.FCBak  fea_test.FCStd  test_box.FCStd  test_box.step  test_box.stl
data/projects/agent_test/: agent_bushing.stl  agent_cube_with_hole.FCStd  agent_cube_with_hole.stl
data/projects/auto_fix_test/: cube_with_hole.FCStd  cube_with_hole.stl
data/projects/cli_test/: plate_with_holes.FCStd  plate_with_holes.stl
data/projects/fc_menu_test/: fc_menu_test.20260528-203626.FCBak  fc_menu_test.FCStd
data/projects/gui_action_test/: gui_action_test.FCStd
data/projects/gui_test/: gui_test_model.20260528-160018.FCBak  gui_test_model.FCStd  gui_test_model.stl
data/projects/multimodal_test/: plate_with_slot.FCStd  plate_with_slot.stl
data/projects/robotic_arm/: assembly.20260528-204534.FCBak  assembly.FCStd  assembly.stl  base_joint_housing.20260528-204251.FCBak  (+23 more)
data/reference/: analysis_report.md
development_log/: 2026-05-27.md  2026-05-28.md  2026-05-30.md  2026-05-31.md
docs/: advisor_brief_20260708.html  feasibility_report.md  freecad_assembly3_feasibility.md  progress_report_20260705.html  related_work_2026.md  solver_research_2025.md
docs/history/: progress.txt
docs/paper/: comparison_table.tex  evaluation_metrics.md  experience_store_design.md  main.tex  outline.md  references.bib
docs/research/: ablation_dynamic_vlm.json  ablation_dynamic_vlm_large.json  closed_loop_gate_validation.json  closed_loop_objective.json  grasp_survey_post_fix.json  optimization_results.json  optimization_xml_results.json
examples/: mechanical_arm.py
logs/: .gitkeep
scripts/: ablation_study.py  backfill_actuated.py  backfill_com_metrics.py  check_paper_consistency.py  check_paper_refs.py  check_refs.py  clean_e2e_run.py  compute_composite_score.py  extract_metrics.py  make_arch_figure.py  make_paper_figs.py  regenerate_4dof_arm.py  render_pickplace_video.py  verify_dual_arm_geometry.py  verify_dual_arm_vlm_fix.py  verify_ros2_package.py  verify_ros2_wsl.py
src/lang3d/: __init__.py  __main__.py  cli.py  config.py  interactive.py
src/lang3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_actuator_tools.py  test_advanced_modeling.py  test_agent.py  test_agent_core_logic.py  test_agent_e2e.py  test_agent_real_flow.py  test_agent_vlm.py  test_arm_pipeline_fix.py  test_arm_topology.py  test_assembly_compose.py  test_assembly_doc.py  test_assembly_fixes.py  test_assembly_matcher.py  test_assembly_patterns.py  test_assembly_render.py  test_assembly_render_verify.py  test_assembly_solver.py  test_assembly_templates.py  test_assembly_verifier_unit.py  test_assembly_verify.py  test_assembly_visual_verifier.py  test_assembly_vlm_e2e.py  test_async_convert.py  test_audit_fixes.py  test_auto_fix.py  test_auto_fix_e2e.py  test_auto_fix闭环.py  test_bearing_dimensions.py  test_bom_gen.py  test_cable_routing.py  test_cfd.py  test_clamper_endpoints.py  test_cli_e2e.py  test_cli_subcommands.py  test_closed_chain_solver.py  test_code_gen.py  test_collision_e2e.py  test_collision_fix.py  test_collision_margin.py  (+122 more)
(+332 files in other folders)
