[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lang3d"
version = "0.1.0"
description = "Language-3D Agent: Multi-expert 3D modeling agent with VLM verification"
authors = [{name = "Language-3D Contributors"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["3d-modeling", "cad", "agent", "freecad", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: 3D Modeling",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.47",
    "mss>=9.0.0",
    "Pillow>=10.3.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pywin32>=306; sys_platform == \"win32\"",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
gui = [
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.0",
]
collision = [
    "trimesh>=4.0.0",
    "python-fcl>=0.7.0",
]
sim = [
    "mujoco>=3.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
lang3d = "lang3d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "unit: Pure-Python tests with no external deps (default). Runs in seconds.",
    "integration: Tests that load real geometry / spawn FreeCAD / use trimesh+fcl / use MuJoCo.",
    "e2e: End-to-end pipeline tests (NL → assembly → export). Slow; often needs GLM API key.",
    "api: Tests that call out to a remote LLM (GLM API). Skipped when GLM_API_KEY unset.",
    "gui: Tests that require a desktop/display (PyAutoGUI, FreeCAD GUI, VLM screenshot). Skip on headless CI.",
    "freecad: Alias for backward compatibility — treated as 'integration'.",
]
